testdata/baselines/reference/submodule/compiler/contextuallyTypedParametersOptionalInJSDoc.errors.txt
index.js(18,5): error TS2554: Expected 2 arguments, but got 1.
index.js(19,14): error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'number'.
index.js(28,15): error TS2345: Argument of type 'number | undefined' is not assignable to parameter of type 'number'.
  Type 'undefined' is not assignable to type 'number'.


==== index.js (3 errors) ====
    /**
     * 
     * @param {number} num 
     */
    function acceptNum(num) {}
    
    /**
     * @typedef {(a: string, b: number) => void} Fn
     */
    
    /** @type {Fn} */
    const fn1 =
      /**
       * @param [b]
       */
      function self(a, b) {
        acceptNum(b); // error
        self("");
        ~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 index.js:8:26: An argument for 'b' was not provided.
        self("", undefined);
                 ~~~~~~~~~
!!! error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'number'.
      };
    
    /** @type {Fn} */
    const fn2 =
      /**
       * @param {number} [b]
       */
      function self(a, b) {
        acceptNum(b); // error
                  ~
!!! error TS2345: Argument of type 'number | undefined' is not assignable to parameter of type 'number'.
!!! error TS2345:   Type 'undefined' is not assignable to type 'number'.
        self("");
        self("", undefined);
      };
    